revert: JDK/JavaFX 昇格とガント関連変更を安定版へ巻き戻し
Java 21・JavaFX 21.0.5・ControlsFX 11.2.1、CI の Java 21、mvnw-env 削除、設備グラフィックガント／セッション状態をコミット 1d6c8ad 相当に復元。