@@ -7,6 +7,8 @@ import java.nio.file.Path;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 import javafx.animation.PauseTransition;
 import javafx.application.Platform;
 import javafx.collections.FXCollections;
@@ -99,10 +101,6 @@ public final class EquipmentGanttGraphicTabController {
     private double equipmentGraphicProcessColWidth =
             EquipmentGraphicGanttPane.DEFAULT_PROCESS_COLUMN_WIDTH;
 
-    private TextField equipmentGraphicBarFontField;
-
-    private String equipmentGraphicBarFontFamily = "";
-
     private PauseTransition equipmentGraphicPersistDelay;
     private PauseTransition equipmentGraphicDividerRebuildDelay;
 
@@ -168,11 +166,6 @@ public final class EquipmentGanttGraphicTabController {
         if (Double.isFinite(pw) && pw > 0) {
             equipmentGraphicProcessColWidth = EquipmentGraphicGanttPane.clampProcessColumnWidth(pw);
         }
-        String f = s.equipmentGanttBarFontFamily();
-        equipmentGraphicBarFontFamily = f != null ? f.strip() : "";
-        if (equipmentGraphicBarFontField != null) {
-            equipmentGraphicBarFontField.setText(equipmentGraphicBarFontFamily);
-        }
     }
 
     double snapshotEquipmentGanttZoomPercent() {
@@ -185,14 +178,6 @@ public final class EquipmentGanttGraphicTabController {
 
     double snapshotEquipmentGanttProcessColWidth() {
         return equipmentGraphicProcessColWidth;
-    }
-
-    String snapshotEquipmentGanttBarFontFamily() {
-        if (equipmentGraphicBarFontField != null) {
-            String t = equipmentGraphicBarFontField.getText();
-            return t != null ? t.strip() : "";
-        }
-        return equipmentGraphicBarFontFamily;
     }
 
     private void scheduleEquipmentGraphicPersist() {
@@ -328,7 +313,8 @@ public final class EquipmentGanttGraphicTabController {
                 return;
             }
 
-            List<String> names = eligible.keySet().stream().sorted().toList();
+            List<String> names =
+                    eligible.keySet().stream().sorted().collect(Collectors.toList());
             String previous =
                     sheetCombo.getSelectionModel().getSelectedItem() != null
                             ? sheetCombo.getSelectionModel().getSelectedItem()
@@ -416,31 +402,7 @@ public final class EquipmentGanttGraphicTabController {
         bar.setAlignment(Pos.CENTER_LEFT);
         bar.setPadding(new Insets(0, 0, 8, 0));
         Label z = new Label("表示倍率（タイムライン・行・フォント）");
-        if (equipmentGraphicBarFontField == null) {
-            equipmentGraphicBarFontField = new TextField();
-            equipmentGraphicBarFontField.setPrefWidth(200);
-            equipmentGraphicBarFontField.setPromptText("バー表示フォント（空＝既定）");
-            equipmentGraphicBarFontField.setText(equipmentGraphicBarFontFamily);
-            equipmentGraphicBarFontField
-                    .textProperty()
-                    .addListener(
-                            (o, a, b) -> {
-                                equipmentGraphicBarFontFamily =
-                                        equipmentGraphicBarFontField.getText() != null
-                                                ? equipmentGraphicBarFontField.getText().strip()
-                                                : "";
-                                rebuildGraphicView();
-                                scheduleEquipmentGraphicPersist();
-                            });
-        }
-        Label fontHint = new Label("バー文字フォント");
-        bar.getChildren()
-                .addAll(
-                        z,
-                        graphicZoomSlider,
-                        graphicZoomPercentLabel,
-                        fontHint,
-                        equipmentGraphicBarFontField);
+        bar.getChildren().addAll(z, graphicZoomSlider, graphicZoomPercentLabel);
         return bar;
     }
 
@@ -460,7 +422,6 @@ public final class EquipmentGanttGraphicTabController {
                         zoom,
                         equipmentGraphicMachineColWidth,
                         equipmentGraphicProcessColWidth,
-                        snapshotEquipmentGanttBarFontFamily(),
                         (mw, pw) -> {
                             double cm = EquipmentGraphicGanttPane.clampMachineColumnWidth(mw);
                             double cp = EquipmentGraphicGanttPane.clampProcessColumnWidth(pw);
